crates/plotnik-lib/tests/03-analyze/anchors/boundary_anchor_at_sequence_end.txt
Q = {(a) .}
==== diagnostics ====
error: boundary anchor requires parent node context
 --> query.ptk:1:10
  |
1 | Q = {(a) .}
  |          ^
  |
help: wrap in a named node: `(parent . (child))`
==== symbols ====
Q
